<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student_screen"
    android:background="@color/green100">

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:hint="@string/type_name"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/editTextGradeOne"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:hint="@string/type_gradeone"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextGradeTwo"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_gradetwo"
        android:background="@drawable/button_style"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGradeOne" />

    <Button
        android:id="@+id/buttonAverage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/button_style"
        android:text="@string/button_average"
        style="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGradeTwo" />
</androidx.constraintlayout.widget.ConstraintLayout>